
15 June
Removed duplicate ~~CMPLEX_TABLES~~ macros

11 July
Added escapes to Plugin pattern regexes in edit.php, e.g. for '('


19 Jul
Dutch language files for settings.php and action/lang

25 Jul
Corrects bug which deletes final monospace markup from list items

28 Jul
Fixed corrupted links to media from userfiles and bad file mode set for edit.php
  --occurred only in fackgLite/dailies versions--

6 Aug
Added language variable to image dialog's align list for "remove alignment"

13 Aug
Preserve plain text samba share syntax

15 Aug
Dutch language updates for fckeditor lang.nl.js and fonts/lang/nl.js

22 Aug
Updates to language strings in link dialog

23 Aug
Fixed error in edit.php that caused external links on initial creation to be converted to internal if links were
created in internal-external order.

24 Aug
Supplied missing fckeditor language strings and JS FCKLang references.

25 Aug
cleaned up fckeditor unused plugins and replaced nested list plugins with FCKeditor's indent and outdent.

27 Aug
Interwiki links: preserve lost forward slashes and query strings

28 Aug
Added language strings and FCKLang refs for file browser

31 Aug
Prevent Alt from accessing CTRL short-cuts when Alt Gr key is hit( in helper.php)

5 Sep
New language strings for Signature plugin and "what's this" in editing window

6 Sep
New lang string-- 'complex_tables'-- for editing window

12 Sep
Corrected fckconfig.js to use editor/lang/<iso.js> files for geshi and keyboard plugins.

Updated language strings for Geshi plugin.

Updated language strings and code for Scayt

Dutch language updates.

13 Sep
Removed trailing comma from en.js (FCKLang) which failed in earlier versions of IE;  fixed
missing span tag in geshi plugin.

14 Sep
Updates to languagestrings and code
Fixed some label tags in edit.php

15 Sep
Updates to language strings in fckeditor
Final Dutch lang update

24 Oct
Removed from Aug 13 fix for handling plain text samaba shares; it corrupts some plugin markup.